Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en"
   ><head
-    ><title>NB Media</title
-    ><meta property="og:title" content="NB Media" /><meta
+    ><title>NB Media: Content creator advertising and management agency</title
+    ><meta
+      name="description"
+      content="NB Media provides content creators with tailored management solutions, boosting growth and engagement via social media, influencer campaigns, and content protection"
+    /><meta
+      property="og:title"
+      content="NB Media: Content creator advertising and management agency"
+    /><meta
+      property="og:description"
+      content="Elevate your content game with NB Media's tailored management solutions. Drive growth, engagement, and protection across platforms effortlessly
+
+"
+    /><meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     /><meta charset="utf-8" /><meta
@@ -559,17 +570,6 @@
           ></div
         ><div id="join-us" class="home-banner"
           ><h1 class="home-text27"><span>Apply To Join NB Media</span><br /></h1
-          ><span class="home-text30"
-            ><span
-              ><span
-                >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                non volutpat turpis. </span
-              ><span> </span></span
-            ><span
-              ><span
-                >Mauris luctus rutrum mi ut rhoncus. Integer in dignissim
-                tortor. </span
-              ><span> </span></span></span
           ><div class="home-container3"
             ><button
               id="zf_button_595400"
@@ -577,8 +577,8 @@
               class="home-button2 button"
               ><span><span>Apply</span><br /></span></button></div></div
         ><div class="home-testimonial"
-          ><h1 class="home-text40"><span>Our clients speak</span></h1
-          ><span class="home-text42"
+          ><h1 class="home-text33"><span>Our clients speak</span></h1
+          ><span class="home-text35"
             ><span
               >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
               volutpat turpis. Mauris luctus rutrum mi ut rhoncus. Integer in
@@ -659,7 +659,7 @@
             src="public/external/nb-media-high-resolution-logo-black-transparent-200h.png"
             class="home-image1" /><div class="home-separator1"></div
           ><div class="home-container5"
-            ><span class="home-text44"
+            ><span class="home-text37"
               >© 2024 NB Media, All Rights Reserved.</span
             ><div class="home-icon-group"
               ><svg viewBox="0 0 950.8571428571428 1024" class="home-icon">
