--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
     /><style>
 
-      .zf_lB_Dimmer_174245{
+      .zf_lB_Dimmer_554339{
           position: fixed;
           top: 0px;
           left: 0px;
@@ -51,7 +51,7 @@
           z-index: 10000000;
       }
 
-      .zf_lB_Container_174245{
+      .zf_lB_Container_554339{
       	position: fixed;
       	background-color: white;
       	margin: 0;
@@ -72,7 +72,7 @@
       margin-bottom: 10px;
       }
 
-      .zf_lB_Wrapper_174245{
+      .zf_lB_Wrapper_554339{
       	position: fixed;
           top: 50%;
           left: 50%;
@@ -81,14 +81,14 @@
           z-index: 10000001;
       }
 
-      .zf_main_id_174245{
+      .zf_main_id_554339{
       	height: calc(100% - 0px);
       	display: flex;
       	overflow-y: auto;
       	overflow-x: hidden;
       }
 
-      .zf_lb_closeform_174245 {
+      .zf_lb_closeform_554339 {
           position: absolute;
           right: -20px;
           background: #2f2e2e;
@@ -100,7 +100,7 @@
           cursor: pointer;
           border: 2px solid #d9d9d9;
       }
-      .zf_lb_closeform_174245:before, .zf_lb_closeform_174245:after {
+      .zf_lb_closeform_554339:before, .zf_lb_closeform_554339:after {
           position: absolute;
           left: 16px;
           content: ' ';
@@ -110,10 +110,10 @@
           background-color: #f7f7f7;
       }
 
-      .zf_lb_closeform_174245:before {
+      .zf_lb_closeform_554339:before {
         transform: rotate(45deg);
       }
-      .zf_lb_closeform_174245:after {
+      .zf_lb_closeform_554339:after {
         transform: rotate(-45deg);
       }
 
@@ -137,43 +137,43 @@
 
 
       @media screen and (min-device-width: 10px) and (max-device-width: 380px) {
-         .zf_lB_Container_174245 {
+         .zf_lB_Container_554339 {
         width: 270px !important;
       }
       }
 
       @media screen and (min-device-width: 360px) and (max-device-width: 480px) {
-         .zf_lB_Container_174245 {
+         .zf_lB_Container_554339 {
         width: 300px !important;
       }
       }
 
       @media screen and (min-device-width: 440px) and (max-device-width: 500px) {
-         .zf_lB_Container_174245 {
+         .zf_lB_Container_554339 {
         width: 380px !important;
       }
       }
 
       @media only screen  and (min-width:500px) and (max-width:600px)  {
-       	.zf_lB_Container_174245 {
+       	.zf_lB_Container_554339 {
       	width: 450px;
        }
       }
 
       @media only screen  and (min-width:601px) and (max-width:700px)  {
-       	.zf_lB_Container_174245 {
+       	.zf_lB_Container_554339 {
       	width: 540px;
        }
       }
 
       @media only screen  and (min-width:700px) and (max-width:800px)  {
-      .zf_lB_Container_174245 {
+      .zf_lB_Container_554339 {
       	width: 650px;
        }
       }
 
       @media screen and (min-device-width: 801px) and (max-device-width: 1268px) {
-         .zf_lB_Container_174245 {
+         .zf_lB_Container_554339 {
         width: 750px !important;
       }
       }
@@ -184,45 +184,45 @@
       	try{
 
       			if( document.readyState == "complete" ){
-      				onloadActions_174245();
+      				onloadActions_554339();
       			}  else {
       			  	window.addEventListener('load', function (){
-      			  		onloadActions_174245();
+      			  		onloadActions_554339();
       			  	}, false);
       			}
 
-      			function onloadActions_174245(){
-      				constructDiv_174245();
-      				loadZForm_174245();
+      			function onloadActions_554339(){
+      				constructDiv_554339();
+      				loadZForm_554339();
       			}
 
-      			function constructDiv_174245(){
+      			function constructDiv_554339(){
       				var iframeDiv = document.createElement("div");
-      				iframeDiv.setAttribute('id','LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245');
-      				iframeDiv.setAttribute('class','zf_main_id_174245');
+      				iframeDiv.setAttribute('id','LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339');
+      				iframeDiv.setAttribute('class','zf_main_id_554339');
 
       				var closeFormDiv = document.createElement("div");
-      				closeFormDiv.setAttribute('id','deleteform_174245');
-      				closeFormDiv.setAttribute('class','zf_lb_closeform_174245');
+      				closeFormDiv.setAttribute('id','deleteform_554339');
+      				closeFormDiv.setAttribute('class','zf_lb_closeform_554339');
 
 
       				var containerDiv = document.createElement("div");
-      				containerDiv.setAttribute('id','containerDiv_174245');
-      				containerDiv.setAttribute('class','zf_lB_Container_174245 fadeIn');
+      				containerDiv.setAttribute('id','containerDiv_554339');
+      				containerDiv.setAttribute('class','zf_lB_Container_554339 fadeIn');
       				containerDiv.appendChild(iframeDiv);
       				containerDiv.appendChild(closeFormDiv);
 
       				var wrapperDiv = document.createElement("div");
-      				wrapperDiv.setAttribute('class','zf_lB_Wrapper_174245');
+      				wrapperDiv.setAttribute('class','zf_lB_Wrapper_554339');
       				wrapperDiv.appendChild(containerDiv);
 
 
       				var dimmerDiv = document.createElement("div");
-      				dimmerDiv.setAttribute('class','zf_lB_Dimmer_174245');
+      				dimmerDiv.setAttribute('class','zf_lB_Dimmer_554339');
       				dimmerDiv.setAttribute('elname','popup_box');
 
       				var mainDiv = document.createElement("div");
-      				mainDiv.setAttribute('id','formsLightBox_174245');
+      				mainDiv.setAttribute('id','formsLightBox_554339');
       				mainDiv.style.display = "none";
       				mainDiv.appendChild(wrapperDiv);
       				mainDiv.appendChild(dimmerDiv);
@@ -231,37 +231,37 @@
 
       			}
 
-      			function showZForm_174245(){
-      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245").getElementsByTagName("iframe")[0];
+      			function showZForm_554339(){
+      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       				if(iframe == undefined ||iframe.length == 0){
-      					loadZForm_174245();
+      					loadZForm_554339();
 
       				}
-      				document.getElementById("formsLightBox_174245").style.display = "block";
+      				document.getElementById("formsLightBox_554339").style.display = "block";
       				document.body.style.overflow = "hidden";
       			}
 
-      			function loadZForm_174245() {
-      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245").getElementsByTagName("iframe")[0];
+      			function loadZForm_554339() {
+      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       				if(iframe == undefined ||iframe.length == 0){
       					var f = document.createElement("iframe");
-      					f.src = getsrcurlZForm_174245('https://forms.zohopublic.eu/NublockHoldings/form/NBMediaApplicationForm/formperma/LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8');
+      					f.src = getsrcurlZForm_554339('https://forms.zohopublic.eu/NublockHoldings/form/NBMediaApplicationForm/formperma/LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8');
 
       					    f.setAttribute("allow","camera;");
 
       					f.style.border="none";
       					f.style.minWidth="100%";
       					f.style.overflow="hidden";
-      					var d = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245");
+      					var d = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339");
       					d.appendChild(f);
 
-      					var deleteForm = document.getElementById("deleteform_174245");
-      					deleteForm.onclick = function deleteZForm_174245() {
-      						var divCont = document.getElementById("formsLightBox_174245");
+      					var deleteForm = document.getElementById("deleteform_554339");
+      					deleteForm.onclick = function deleteZForm_554339() {
+      						var divCont = document.getElementById("formsLightBox_554339");
       						divCont.style.display="none";
       						document.body.style.overflow = "";
 
-      						var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245").getElementsByTagName("iframe")[0];
+      						var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       						iframe.remove();
       					}
 
@@ -274,7 +274,7 @@
       							if ( zf_ifrm_data.length == 2 || zf_ifrm_data.length == 3 ) {
       								var zf_perma = zf_ifrm_data[0];
       								var zf_ifrm_ht_nw = ( parseInt(zf_ifrm_data[1], 10) + 15 ) + "px";
-      								var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_174245").getElementsByTagName("iframe")[0];
+      								var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       								if ( (iframe.src).indexOf('formperma') > 0 && (iframe.src).indexOf(zf_perma) > 0 ) {
       									var prevIframeHeight = iframe.style.height;
 
@@ -288,12 +288,12 @@
       										if( zf_tout ) {
       											setTimeout(function(){
       										        iframe.style.minHeight = zf_ifrm_ht_nw;
-      												var containerDiv = document.getElementById("containerDiv_174245");
+      												var containerDiv = document.getElementById("containerDiv_554339");
       												containerDiv.style.height=zf_ifrm_ht_nw;
       										    },500);
       										} else {
       										    iframe.style.minHeight = zf_ifrm_ht_nw;
-      											var containerDiv = document.getElementById("containerDiv_174245");
+      											var containerDiv = document.getElementById("containerDiv_554339");
       											containerDiv.style.height=zf_ifrm_ht_nw;
       										}
       									}
@@ -307,7 +307,7 @@
 
 
 
-      			function getsrcurlZForm_174245(zf_src) {
+      			function getsrcurlZForm_554339(zf_src) {
       				try {
 
       						if(zf_src.indexOf("?") == -1){
@@ -350,6 +350,9 @@
       				}catch(e){}
       				return zf_src;
       			}
+      			var buttonElem = document.getElementById("zf_button_554339");
+      			buttonElem.style.display = "block";
+      			buttonElem.addEventListener("click", showZForm_554339);
 
 
       	}catch(e){}
