Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
       			}
 
       			function showZForm_554339(){
+      			console.log('trace')
       				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       				if(iframe == undefined ||iframe.length == 0){
       					loadZForm_554339();
@@ -362,8 +363,9 @@
       				return zf_src;
       			}
       			var buttonElem = document.getElementById("zf_button_554339");
+      			console.log(buttonElem)
       			buttonElem.style.display = "block";
-      			buttonElem.addEventListener("click", showZForm_554339);
+      			buttonElem.addEventListener("submit", showZForm_554339);
 
 
       	}catch(e){}
@@ -573,7 +575,7 @@
           ><div class="home-container3"
             ><button
               id="zf_button_554339"
-              type="button"
+              type="submit"
               class="home-button2 button"
               ><span><span>Apply</span><br /></span></button></div></div
         ><div class="home-testimonial"
