--- a/404.html
+++ b/404.html
@@ -232,6 +232,7 @@
       			}
 
       			function showZForm_554339(){
+      			console.log('trace')
       				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
       				if(iframe == undefined ||iframe.length == 0){
       					loadZForm_554339();
@@ -351,8 +352,9 @@
       				return zf_src;
       			}
       			var buttonElem = document.getElementById("zf_button_554339");
+      			console.log(buttonElem)
       			buttonElem.style.display = "block";
-      			buttonElem.addEventListener("click", showZForm_554339);
+      			buttonElem.addEventListener("submit", showZForm_554339);
 
 
       	}catch(e){}
