Commit from TeleportHQ

--- a/404.html
+++ b/404.html
@@ -354,7 +354,7 @@
       			var buttonElem = document.getElementById("zf_button_554339");
       			console.log(buttonElem)
       			buttonElem.style.display = "block";
-      			buttonElem.addEventListener("submit", showZForm_554339);
+      			buttonElem.addEventListener("click", showZForm_554339);
 
 
       	}catch(e){}
