--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       			var buttonElem = document.getElementById("zf_button_554339");
       			console.log(buttonElem)
       			buttonElem.style.display = "block";
-      			buttonElem.addEventListener("submit", showZForm_554339);
+      			buttonElem.addEventListener("click", showZForm_554339);
 
 
       	}catch(e){}
@@ -575,7 +575,7 @@
           ><div class="home-container3"
             ><button
               id="zf_button_554339"
-              type="submit"
+              type="button"
               class="home-button2 button"
               ><span><span>Apply</span><br /></span></button></div></div
         ><div class="home-testimonial"
