--- a/404.html
+++ b/404.html
@@ -177,10 +177,24 @@
         width: 750px !important;
       }
       }
-    </style>
-
+    </style></head
+  ><body
+    ><link rel="stylesheet" href="./style.css" /><div
+      ><link href="./404.css" rel="stylesheet" /><div
+        class="not-found-container"
+        ><h3>OOPS! PAGE NOT FOUND</h3
+        ><div class="not-found-container1"
+          ><h1 class="not-found-text1">404</h1></div
+        ><div class="not-found-container2"
+          ><h2 class="not-found-text2"
+            >WE ARE SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND</h2
+          ></div
+        ></div
+      ></div
+    >
     <script type="text/javascript">
       (function() {
+      console.log('123')
       	try{
 
       			if( document.readyState == "complete" ){
@@ -358,23 +372,8 @@
 
 
       	}catch(e){}
-      })();
-    </script></head
-  ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./404.css" rel="stylesheet" /><div
-        class="not-found-container"
-        ><h3>OOPS! PAGE NOT FOUND</h3
-        ><div class="not-found-container1"
-          ><h1 class="not-found-text1">404</h1></div
-        ><div class="not-found-container2"
-          ><h2 class="not-found-text2"
-            >WE ARE SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND</h2
-          ></div
-        ></div
-      ></div
-    >
-    <script
+      })();</script
+    ><script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script></body
