--- a/index.html
+++ b/index.html
@@ -188,189 +188,7 @@
         width: 750px !important;
       }
       }
-    </style>
-
-    <script type="text/javascript">
-      (function() {
-      	try{
-
-      			if( document.readyState == "complete" ){
-      				onloadActions_554339();
-      			}  else {
-      			  	window.addEventListener('load', function (){
-      			  		onloadActions_554339();
-      			  	}, false);
-      			}
-
-      			function onloadActions_554339(){
-      				constructDiv_554339();
-      				loadZForm_554339();
-      			}
-
-      			function constructDiv_554339(){
-      				var iframeDiv = document.createElement("div");
-      				iframeDiv.setAttribute('id','LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339');
-      				iframeDiv.setAttribute('class','zf_main_id_554339');
-
-      				var closeFormDiv = document.createElement("div");
-      				closeFormDiv.setAttribute('id','deleteform_554339');
-      				closeFormDiv.setAttribute('class','zf_lb_closeform_554339');
-
-
-      				var containerDiv = document.createElement("div");
-      				containerDiv.setAttribute('id','containerDiv_554339');
-      				containerDiv.setAttribute('class','zf_lB_Container_554339 fadeIn');
-      				containerDiv.appendChild(iframeDiv);
-      				containerDiv.appendChild(closeFormDiv);
-
-      				var wrapperDiv = document.createElement("div");
-      				wrapperDiv.setAttribute('class','zf_lB_Wrapper_554339');
-      				wrapperDiv.appendChild(containerDiv);
-
-
-      				var dimmerDiv = document.createElement("div");
-      				dimmerDiv.setAttribute('class','zf_lB_Dimmer_554339');
-      				dimmerDiv.setAttribute('elname','popup_box');
-
-      				var mainDiv = document.createElement("div");
-      				mainDiv.setAttribute('id','formsLightBox_554339');
-      				mainDiv.style.display = "none";
-      				mainDiv.appendChild(wrapperDiv);
-      				mainDiv.appendChild(dimmerDiv);
-
-      				document.body.appendChild(mainDiv);
-
-      			}
-
-      			function showZForm_554339(){
-      			console.log('trace')
-      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
-      				if(iframe == undefined ||iframe.length == 0){
-      					loadZForm_554339();
-
-      				}
-      				document.getElementById("formsLightBox_554339").style.display = "block";
-      				document.body.style.overflow = "hidden";
-      			}
-
-      			function loadZForm_554339() {
-      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
-      				if(iframe == undefined ||iframe.length == 0){
-      					var f = document.createElement("iframe");
-      					f.src = getsrcurlZForm_554339('https://forms.zohopublic.eu/NublockHoldings/form/NBMediaApplicationForm/formperma/LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8');
-
-      					    f.setAttribute("allow","camera;");
-
-      					f.style.border="none";
-      					f.style.minWidth="100%";
-      					f.style.overflow="hidden";
-      					var d = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339");
-      					d.appendChild(f);
-
-      					var deleteForm = document.getElementById("deleteform_554339");
-      					deleteForm.onclick = function deleteZForm_554339() {
-      						var divCont = document.getElementById("formsLightBox_554339");
-      						divCont.style.display="none";
-      						document.body.style.overflow = "";
-
-      						var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
-      						iframe.remove();
-      					}
-
-
-
-      					window.addEventListener('message', function (){
-      						var evntData = event.data;
-      						if( evntData && evntData.constructor == String ){
-      							var zf_ifrm_data = evntData.split("|");
-      							if ( zf_ifrm_data.length == 2 || zf_ifrm_data.length == 3 ) {
-      								var zf_perma = zf_ifrm_data[0];
-      								var zf_ifrm_ht_nw = ( parseInt(zf_ifrm_data[1], 10) + 15 ) + "px";
-      								var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
-      								if ( (iframe.src).indexOf('formperma') > 0 && (iframe.src).indexOf(zf_perma) > 0 ) {
-      									var prevIframeHeight = iframe.style.height;
-
-      									var zf_tout = false;
-      									if( zf_ifrm_data.length == 3 ) {
-      									    iframe.scrollIntoView();
-      									    zf_tout = true;
-      									}
-
-      									if ( prevIframeHeight != zf_ifrm_ht_nw ) {
-      										if( zf_tout ) {
-      											setTimeout(function(){
-      										        iframe.style.minHeight = zf_ifrm_ht_nw;
-      												var containerDiv = document.getElementById("containerDiv_554339");
-      												containerDiv.style.height=zf_ifrm_ht_nw;
-      										    },500);
-      										} else {
-      										    iframe.style.minHeight = zf_ifrm_ht_nw;
-      											var containerDiv = document.getElementById("containerDiv_554339");
-      											containerDiv.style.height=zf_ifrm_ht_nw;
-      										}
-      									}
-      								}
-      							}
-      						}
-
-      					}, false);
-      				}
-      			}
-
-
-
-      			function getsrcurlZForm_554339(zf_src) {
-      				try {
-
-      						if(zf_src.indexOf("?") == -1){
-      							zf_src+="?zf_enablecamera=true"; // No I18N
-      						} else {
-      							zf_src+="&zf_enablecamera=true" // No I18N
-      						}
-
-      					if ( typeof ZFAdvLead !== "undefined" && typeof zfutm_zfAdvLead !== "undefined" ) {
-      						for( var prmIdx = 0 ; prmIdx < ZFAdvLead.utmPNameArr.length ; prmIdx ++ ) {
-      				        	var utmPm = ZFAdvLead.utmPNameArr[ prmIdx ];
-      				        	var utmVal = zfutm_zfAdvLead.zfautm_gC_enc( ZFAdvLead.utmPNameArr[ prmIdx ] );
-      					        if ( typeof utmVal !== "undefined" ) {
-      					          if ( utmVal != "" ){
-      					            if(zf_src.indexOf('?') > 0){
-      					              zf_src = zf_src+'&'+utmPm+'='+utmVal;//No I18N
-      					            }else{
-      					              zf_src = zf_src+'?'+utmPm+'='+utmVal;//No I18N
-      					            }
-      					          }
-      					        }
-      				      	}
-      					}
-
-      					if ( typeof ZFLead !== "undefined" && typeof zfutm_zfLead !== "undefined" ) {
-      						for( var prmIdx = 0 ; prmIdx < ZFLead.utmPNameArr.length ; prmIdx ++ ) {
-      				        	var utmPm = ZFLead.utmPNameArr[ prmIdx ];
-      				        	var utmVal = zfutm_zfLead.zfutm_gC_enc( ZFLead.utmPNameArr[ prmIdx ] );
-      					        if ( typeof utmVal !== "undefined" ) {
-      					          if ( utmVal != "" ){
-      					            if(zf_src.indexOf('?') > 0){
-      					              zf_src = zf_src+'&'+utmPm+'='+utmVal;//No I18N
-      					            }else{
-      					              zf_src = zf_src+'?'+utmPm+'='+utmVal;//No I18N
-      					            }
-      					          }
-      					        }
-      				      	}
-      					}
-      				}catch(e){}
-      				return zf_src;
-      			}
-      			var buttonElem = document.getElementById("zf_button_554339");
-      			console.log(buttonElem)
-      			buttonElem.style.display = "block";
-      			buttonElem.addEventListener("click", showZForm_554339);
-
-
-      	}catch(e){}
-      })();
-    </script></head
+    </style></head
   ><body
     ><link rel="stylesheet" href="./style.css" /><div
       ><link href="./index.css" rel="stylesheet" /><div
@@ -677,7 +495,188 @@
                   d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
                 ></path></svg></div></div></footer></div
     ></div>
-    <script
+    <script type="text/javascript">
+      (function() {
+      console.log('123')
+      	try{
+
+      			if( document.readyState == "complete" ){
+      				onloadActions_554339();
+      			}  else {
+      			  	window.addEventListener('load', function (){
+      			  		onloadActions_554339();
+      			  	}, false);
+      			}
+
+      			function onloadActions_554339(){
+      				constructDiv_554339();
+      				loadZForm_554339();
+      			}
+
+      			function constructDiv_554339(){
+      				var iframeDiv = document.createElement("div");
+      				iframeDiv.setAttribute('id','LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339');
+      				iframeDiv.setAttribute('class','zf_main_id_554339');
+
+      				var closeFormDiv = document.createElement("div");
+      				closeFormDiv.setAttribute('id','deleteform_554339');
+      				closeFormDiv.setAttribute('class','zf_lb_closeform_554339');
+
+
+      				var containerDiv = document.createElement("div");
+      				containerDiv.setAttribute('id','containerDiv_554339');
+      				containerDiv.setAttribute('class','zf_lB_Container_554339 fadeIn');
+      				containerDiv.appendChild(iframeDiv);
+      				containerDiv.appendChild(closeFormDiv);
+
+      				var wrapperDiv = document.createElement("div");
+      				wrapperDiv.setAttribute('class','zf_lB_Wrapper_554339');
+      				wrapperDiv.appendChild(containerDiv);
+
+
+      				var dimmerDiv = document.createElement("div");
+      				dimmerDiv.setAttribute('class','zf_lB_Dimmer_554339');
+      				dimmerDiv.setAttribute('elname','popup_box');
+
+      				var mainDiv = document.createElement("div");
+      				mainDiv.setAttribute('id','formsLightBox_554339');
+      				mainDiv.style.display = "none";
+      				mainDiv.appendChild(wrapperDiv);
+      				mainDiv.appendChild(dimmerDiv);
+
+      				document.body.appendChild(mainDiv);
+
+      			}
+
+      			function showZForm_554339(){
+      			console.log('trace')
+      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
+      				if(iframe == undefined ||iframe.length == 0){
+      					loadZForm_554339();
+
+      				}
+      				document.getElementById("formsLightBox_554339").style.display = "block";
+      				document.body.style.overflow = "hidden";
+      			}
+
+      			function loadZForm_554339() {
+      				var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
+      				if(iframe == undefined ||iframe.length == 0){
+      					var f = document.createElement("iframe");
+      					f.src = getsrcurlZForm_554339('https://forms.zohopublic.eu/NublockHoldings/form/NBMediaApplicationForm/formperma/LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8');
+
+      					    f.setAttribute("allow","camera;");
+
+      					f.style.border="none";
+      					f.style.minWidth="100%";
+      					f.style.overflow="hidden";
+      					var d = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339");
+      					d.appendChild(f);
+
+      					var deleteForm = document.getElementById("deleteform_554339");
+      					deleteForm.onclick = function deleteZForm_554339() {
+      						var divCont = document.getElementById("formsLightBox_554339");
+      						divCont.style.display="none";
+      						document.body.style.overflow = "";
+
+      						var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
+      						iframe.remove();
+      					}
+
+
+
+      					window.addEventListener('message', function (){
+      						var evntData = event.data;
+      						if( evntData && evntData.constructor == String ){
+      							var zf_ifrm_data = evntData.split("|");
+      							if ( zf_ifrm_data.length == 2 || zf_ifrm_data.length == 3 ) {
+      								var zf_perma = zf_ifrm_data[0];
+      								var zf_ifrm_ht_nw = ( parseInt(zf_ifrm_data[1], 10) + 15 ) + "px";
+      								var iframe = document.getElementById("LLPL0fFbz1_GsSi-EK48swKLD6G6hutqHvEEzPF6po8_554339").getElementsByTagName("iframe")[0];
+      								if ( (iframe.src).indexOf('formperma') > 0 && (iframe.src).indexOf(zf_perma) > 0 ) {
+      									var prevIframeHeight = iframe.style.height;
+
+      									var zf_tout = false;
+      									if( zf_ifrm_data.length == 3 ) {
+      									    iframe.scrollIntoView();
+      									    zf_tout = true;
+      									}
+
+      									if ( prevIframeHeight != zf_ifrm_ht_nw ) {
+      										if( zf_tout ) {
+      											setTimeout(function(){
+      										        iframe.style.minHeight = zf_ifrm_ht_nw;
+      												var containerDiv = document.getElementById("containerDiv_554339");
+      												containerDiv.style.height=zf_ifrm_ht_nw;
+      										    },500);
+      										} else {
+      										    iframe.style.minHeight = zf_ifrm_ht_nw;
+      											var containerDiv = document.getElementById("containerDiv_554339");
+      											containerDiv.style.height=zf_ifrm_ht_nw;
+      										}
+      									}
+      								}
+      							}
+      						}
+
+      					}, false);
+      				}
+      			}
+
+
+
+      			function getsrcurlZForm_554339(zf_src) {
+      				try {
+
+      						if(zf_src.indexOf("?") == -1){
+      							zf_src+="?zf_enablecamera=true"; // No I18N
+      						} else {
+      							zf_src+="&zf_enablecamera=true" // No I18N
+      						}
+
+      					if ( typeof ZFAdvLead !== "undefined" && typeof zfutm_zfAdvLead !== "undefined" ) {
+      						for( var prmIdx = 0 ; prmIdx < ZFAdvLead.utmPNameArr.length ; prmIdx ++ ) {
+      				        	var utmPm = ZFAdvLead.utmPNameArr[ prmIdx ];
+      				        	var utmVal = zfutm_zfAdvLead.zfautm_gC_enc( ZFAdvLead.utmPNameArr[ prmIdx ] );
+      					        if ( typeof utmVal !== "undefined" ) {
+      					          if ( utmVal != "" ){
+      					            if(zf_src.indexOf('?') > 0){
+      					              zf_src = zf_src+'&'+utmPm+'='+utmVal;//No I18N
+      					            }else{
+      					              zf_src = zf_src+'?'+utmPm+'='+utmVal;//No I18N
+      					            }
+      					          }
+      					        }
+      				      	}
+      					}
+
+      					if ( typeof ZFLead !== "undefined" && typeof zfutm_zfLead !== "undefined" ) {
+      						for( var prmIdx = 0 ; prmIdx < ZFLead.utmPNameArr.length ; prmIdx ++ ) {
+      				        	var utmPm = ZFLead.utmPNameArr[ prmIdx ];
+      				        	var utmVal = zfutm_zfLead.zfutm_gC_enc( ZFLead.utmPNameArr[ prmIdx ] );
+      					        if ( typeof utmVal !== "undefined" ) {
+      					          if ( utmVal != "" ){
+      					            if(zf_src.indexOf('?') > 0){
+      					              zf_src = zf_src+'&'+utmPm+'='+utmVal;//No I18N
+      					            }else{
+      					              zf_src = zf_src+'?'+utmPm+'='+utmVal;//No I18N
+      					            }
+      					          }
+      					        }
+      				      	}
+      					}
+      				}catch(e){}
+      				return zf_src;
+      			}
+      			var buttonElem = document.getElementById("zf_button_554339");
+      			console.log(buttonElem)
+      			buttonElem.style.display = "block";
+      			buttonElem.addEventListener("click", showZForm_554339);
+
+
+      	}catch(e){}
+      })();</script
+    ><script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script></body
